syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "Mail.Grpc.Protos";

service MailProtoService{
  rpc SendEmail(SendEmailRequest) returns (google.protobuf.Empty);
}

message SendEmailRequest{
  string toEmail = 1;
  string subject = 2;
  string body = 3;
  repeated bytes attachments = 4;
}
